<resources>
    <string name="app_name">weight tracker</string>
    <string name="data">Data de hoje</string>
    <string name="peso">Peso de Hoje</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar Historico</string>
    <string name="mostrarnoterminal">Mostrar dados no terminal
    </string>
    <string name="principal">Main</string>
    <string name="showgraph">Show Graph</string>

</resources>
